tests/__snapshots__/api-toBe-unions-stderr.snap.txt
Error: Type 'string | number' is not the same as type 'string | boolean'.

  16 |   expect<string | Array<string>>().type.toBe<string | Array<string>>();
  17 | 
  18 |   expect<string | number>().type.toBe<string | boolean>(); // fail
     |                                       ~~~~~~~~~~~~~~~~
  19 |   expect<string | Array<string>>().type.toBe<string | Array<number>>(); // fail
  20 | });
  21 | 

       at ./__typetests__/unions.tst.ts:18:39 ❭ is union the same?

Error: Type 'string | string[]' is not the same as type 'string | number[]'.

  17 | 
  18 |   expect<string | number>().type.toBe<string | boolean>(); // fail
  19 |   expect<string | Array<string>>().type.toBe<string | Array<number>>(); // fail
     |                                              ~~~~~~~~~~~~~~~~~~~~~~
  20 | });
  21 | 
  22 | test("is union NOT the same?", () => {

       at ./__typetests__/unions.tst.ts:19:46 ❭ is union the same?

Error: Type 'string | number' is the same as type 'string | number'.

  24 |   expect<string | Array<string>>().type.not.toBe<string | Array<number>>();
  25 | 
  26 |   expect<string | number>().type.not.toBe<string | number>(); // fail
     |                                           ~~~~~~~~~~~~~~~
  27 |   expect<string | Array<string>>().type.not.toBe<string | Array<string>>(); // fail
  28 | });
  29 | 

       at ./__typetests__/unions.tst.ts:26:43 ❭ is union NOT the same?

Error: Type 'string | string[]' is the same as type 'string | string[]'.

  25 | 
  26 |   expect<string | number>().type.not.toBe<string | number>(); // fail
  27 |   expect<string | Array<string>>().type.not.toBe<string | Array<string>>(); // fail
     |                                                  ~~~~~~~~~~~~~~~~~~~~~~
  28 | });
  29 | 

       at ./__typetests__/unions.tst.ts:27:50 ❭ is union NOT the same?

